新增：标签删除服务
